--- a/NYTimesAndroidAutomationProject/test-output/emailable-report.html
+++ b/NYTimesAndroidAutomationProject/test-output/emailable-report.html
@@ -8,11 +8,13 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">27,683</td><td></td><td></td></tr>
+<tr><th colspan="7">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">75,280</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Com.NYT.TestCases.ToVerifyVerticalScroll</td><td><a href="#m0">ScrollTest</a></td><td rowspan="1">1546262000261</td><td rowspan="1">19472</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Com.NYT.TestCases.ToVerifyVerticalScroll</td><td><a href="#m0">ScrollTest</a></td><td rowspan="1">1546450038164</td><td rowspan="1">22082</td></tr><tr class="passedodd"><td rowspan="1">Com.NYT.TestCases.toCheckSectionList</td><td><a href="#m1">toInvokeSectionlistItem</a></td><td rowspan="1">1546449994736</td><td rowspan="1">3552</td></tr><tr class="passedeven"><td rowspan="1">Com.NYT.TestCases.toVerifyLogin</td><td><a href="#m2">toVerifyLoginfunc</a></td><td rowspan="1">1546450007046</td><td rowspan="1">22589</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">Com.NYT.TestCases.ToVerifyVerticalScroll#ScrollTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">Com.NYT.TestCases.ToVerifyVerticalScroll#ScrollTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Com.NYT.TestCases.toCheckSectionList#toInvokeSectionlistItem</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Com.NYT.TestCases.toVerifyLogin#toVerifyLoginfunc</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
