--- a/NYTimesAndroidAutomationProject/test-output/old/Default suite/methods-alphabetical.html
+++ b/NYTimesAndroidAutomationProject/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="94c7ba">  <td>18/12/31 18:43:12</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BasePackage.Appinvoke()[pri:0, instance:Com.NYT.Utils.UtilityClass@56235b8e]">&gt;&gt;Appinvoke</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1232306490</td>   <td></td> </tr>
-<tr bgcolor="6ab1ab">  <td>18/12/31 18:43:20</td>   <td>8191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ToVerifyVerticalScroll.ScrollTest()[pri:0, instance:Com.NYT.TestCases.ToVerifyVerticalScroll@3632be31]">ScrollTest</td> 
-  <td>main@1232306490</td>   <td></td> </tr>
+<tr bgcolor="94c7ba">  <td>19/01/02 17:12:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePackage.Appinvoke()[pri:0, instance:Com.NYT.TestCases.toCheckSectionList@6fc6f14e]">&gt;&gt;Appinvoke</td> 
+<td>&nbsp;</td>  <td>main@2097514481</td>   <td></td> </tr>
+<tr bgcolor="94c7ba">  <td>19/01/02 17:12:36</td>   <td>11892</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePackage.Appinvoke()[pri:0, instance:Com.NYT.TestCases.toVerifyLogin@56235b8e]">&gt;&gt;Appinvoke</td> 
+<td>&nbsp;</td>  <td>main@2097514481</td>   <td></td> </tr>
+<tr bgcolor="94c7ba">  <td>19/01/02 17:12:35</td>   <td>10927</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePackage.QuitApp()[pri:0, instance:Com.NYT.TestCases.toCheckSectionList@6fc6f14e]">&lt;&lt;QuitApp</td> 
+<td>&nbsp;</td>  <td>main@2097514481</td>   <td></td> </tr>
+<tr bgcolor="94c7ba">  <td>19/01/02 17:12:46</td>   <td>21909</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePackage.QuitApp()[pri:0, instance:Com.NYT.TestCases.toVerifyLogin@56235b8e]">&lt;&lt;QuitApp</td> 
+<td>&nbsp;</td>  <td>main@2097514481</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/01/02 17:12:32</td>   <td>8016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toCheckSectionList.toInvokeSectionlistItem()[pri:0, instance:Com.NYT.TestCases.toCheckSectionList@6fc6f14e]">toInvokeSectionlistItem</td> 
+  <td>main@2097514481</td>   <td></td> </tr>
+<tr bgcolor="ee68d8">  <td>19/01/02 17:12:43</td>   <td>19064</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toVerifyLogin.toVerifyLoginfunc()[pri:0, instance:Com.NYT.TestCases.toVerifyLogin@56235b8e]">toVerifyLoginfunc</td> 
+  <td>main@2097514481</td>   <td></td> </tr>
 </table>
