--- a/NYTimesAndroidAutomationProject/test-output/old/Suite/methods-alphabetical.html
+++ b/NYTimesAndroidAutomationProject/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60a1bd">  <td>18/12/21 22:25:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toCheckSectionList.toInvokeSectionlistItem()[pri:0, instance:Com.NYT.TestCases.toCheckSectionList@146ba0ac]">toInvokeSectionlistItem</td> 
-  <td>main@1383547042</td>   <td></td> </tr>
-<tr bgcolor="efea79">  <td>18/12/21 22:25:12</td>   <td>10869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toVerifyLogin.toVerifyLoginfunc()[pri:0, instance:Com.NYT.TestCases.toVerifyLogin@464bee09]">toVerifyLoginfunc</td> 
-  <td>main@1383547042</td>   <td></td> </tr>
+<tr bgcolor="bd9462">  <td>19/01/02 22:56:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePackage.Appinvoke()[pri:0, instance:Com.NYT.TestCases.toCheckSectionList@5700d6b1]">&gt;&gt;Appinvoke</td> 
+<td>&nbsp;</td>  <td>main@2106620844</td>   <td></td> </tr>
+<tr bgcolor="bd9462">  <td>19/01/02 22:56:39</td>   <td>13329</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePackage.Appinvoke()[pri:0, instance:Com.NYT.TestCases.toVerifyLogin@6fd02e5]">&gt;&gt;Appinvoke</td> 
+<td>&nbsp;</td>  <td>main@2106620844</td>   <td></td> </tr>
+<tr bgcolor="bd9462">  <td>19/01/02 22:57:10</td>   <td>44675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePackage.Appinvoke()[pri:0, instance:Com.NYT.TestCases.ToVerifyVerticalScroll@5bcab519]">&gt;&gt;Appinvoke</td> 
+<td>&nbsp;</td>  <td>main@2106620844</td>   <td></td> </tr>
+<tr bgcolor="bd9462">  <td>19/01/02 22:56:38</td>   <td>12344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePackage.QuitApp()[pri:0, instance:Com.NYT.TestCases.toCheckSectionList@5700d6b1]">&lt;&lt;QuitApp</td> 
+<td>&nbsp;</td>  <td>main@2106620844</td>   <td></td> </tr>
+<tr bgcolor="bd9462">  <td>19/01/02 22:57:09</td>   <td>43692</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePackage.QuitApp()[pri:0, instance:Com.NYT.TestCases.toVerifyLogin@6fd02e5]">&lt;&lt;QuitApp</td> 
+<td>&nbsp;</td>  <td>main@2106620844</td>   <td></td> </tr>
+<tr bgcolor="bd9462">  <td>19/01/02 22:57:40</td>   <td>74303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePackage.QuitApp()[pri:0, instance:Com.NYT.TestCases.ToVerifyVerticalScroll@5bcab519]">&lt;&lt;QuitApp</td> 
+<td>&nbsp;</td>  <td>main@2106620844</td>   <td></td> </tr>
+<tr bgcolor="6ab1ab">  <td>19/01/02 22:57:18</td>   <td>52220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ToVerifyVerticalScroll.ScrollTest()[pri:0, instance:Com.NYT.TestCases.ToVerifyVerticalScroll@5bcab519]">ScrollTest</td> 
+  <td>main@2106620844</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>19/01/02 22:56:34</td>   <td>8792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toCheckSectionList.toInvokeSectionlistItem()[pri:0, instance:Com.NYT.TestCases.toCheckSectionList@5700d6b1]">toInvokeSectionlistItem</td> 
+  <td>main@2106620844</td>   <td></td> </tr>
+<tr bgcolor="94c7ba">  <td>19/01/02 22:56:47</td>   <td>21102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="toVerifyLogin.toVerifyLoginfunc()[pri:0, instance:Com.NYT.TestCases.toVerifyLogin@6fd02e5]">toVerifyLoginfunc</td> 
+  <td>main@2106620844</td>   <td></td> </tr>
 </table>
